--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                             <div class="col-xl-3 col-lg-3">
                                 <div class="logo">
                                     <a href="index.html">
-                                        <img src="img/tedx.png" alt="">
+                                        <img src="img/tedxtkmce.jpeg"
+                                            style="width:230px; height:50px; object-fit: cover">
                                     </a>
                                 </div>
                             </div>
@@ -94,9 +95,12 @@
                             <div class="shape_2 wow fadeInDown" data-wow-duration="1s" data-wow-delay=".2s">
                                 <img src="img/shape/shape_2.svg" alt="">
                             </div> -->
-                            <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">TED<span id="x"
+                            <!-- <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">TED<span id="x"
                                     class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">x</span>
                                 <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">TKMCE</span>
+                            </h3> -->
+                            <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">Theme<span
+                                    id="x"></span>
                             </h3>
                             <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">17 July,
                                 2020</span>
@@ -117,6 +121,54 @@
     </div>
     </div>
     <!-- slider_area_end -->
+
+    <!-- about_area_start  -->
+    <div class="about_area black_bg">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="section_title text-center mb-80">
+                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Theme</h3>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">The event regularly
+                            attracts a diverse range of attendees from around the world, across different professions,
+                            and with different.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="section_title text-center mb-80">
+                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">About TED</h3>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">The event regularly
+                            attracts a diverse range of attendees from around the world, across different professions,
+                            and with different.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="section_title text-center mb-80">
+                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TEDx</h3>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">The event regularly
+                            attracts a diverse range of attendees from around the world, across different professions,
+                            and with different.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="section_title text-center mb-80">
+                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TKMCE</h3>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">The event regularly
+                            attracts a diverse range of attendees from around the world, across different professions,
+                            and with different.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!-- about_area_end  -->
 
     <!-- performar_area_start  -->
     <div class="performar_area black_bg">
@@ -182,210 +234,6 @@
     </div>
     <!-- performar_area_end  -->
 
-    <!-- about_area_start  -->
-    <div class="about_area black_bg">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="section_title text-center mb-80">
-                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">About TED</h3>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">The event regularly
-                            attracts a diverse range of attendees from around the world, across different professions,
-                            and with different.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="section_title text-center mb-80">
-                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TEDx</h3>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">The event regularly
-                            attracts a diverse range of attendees from around the world, across different professions,
-                            and with different.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="section_title text-center mb-80">
-                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TKMCE</h3>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">The event regularly
-                            attracts a diverse range of attendees from around the world, across different professions,
-                            and with different.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row align-items-center">
-                <div class="col-lg-7 col-md-6">
-                    <div class="about_thumb">
-                        <div class="shap_3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">
-                            <img src="img/shape/shape_3.svg" alt="">
-                        </div>
-                        <div class="thumb_inner  wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                            <img src="img/about/about.png" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-5 col-md-6">
-                    <div class="about_info pl-68">
-                        <h4 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">It’s time to book your
-                            seat</h4>
-                        <p class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s">The event regularly
-                            attracts a diverse range of attendees from around the world, across different professions,
-                            and with different levels of experience transform your business.</p>
-                        <a href="#" class="boxed-btn3  wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s">Buy
-                            Tickets</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- about_area_end  -->
-
-    <div class="program_details_area detials_bg_1 overlay2">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section_title text-center mb-80  wow fadeInRight" data-wow-duration="1s"
-                        data-wow-delay=".3s">
-                        <h3>Program Details</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="program_detail_wrap">
-                        <div class="single_propram">
-                            <div class="inner_wrap">
-                                <div class="circle_img"></div>
-                                <div class="porgram_top">
-                                    <span class=" wow fadeInLeft" data-wow-duration="1s"
-                                        data-wow-delay=".3s">3.00-4.00pm</span>
-                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">12 Feb 2020
-                                    </h4>
-                                </div>
-                                <div class="thumb wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <img src="img/program_details/1.png" alt="">
-                                </div>
-                                <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">Mr. Zosoldos</h4>
-                            </div>
-                        </div>
-                        <div class="single_propram">
-                            <div class="inner_wrap">
-                                <div class="circle_img"></div>
-                                <div class="porgram_top">
-                                    <span class="wow fadeInRight" data-wow-duration="1s"
-                                        data-wow-delay=".3s">3.00-4.00pm</span>
-                                    <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">12 Feb 2020
-                                    </h4>
-                                </div>
-                                <div class="thumb wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <img src="img/program_details/2.png" alt="">
-                                </div>
-                                <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".6s">Mr. Zosoldos
-                                </h4>
-                            </div>
-                        </div>
-                        <div class="single_propram">
-                            <div class="inner_wrap">
-                                <div class="circle_img"></div>
-                                <div class="porgram_top">
-                                    <span class=" wow fadeInLeft" data-wow-duration="1s"
-                                        data-wow-delay=".3s">3.00-4.00pm</span>
-                                    <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">12 Feb 2020
-                                    </h4>
-                                </div>
-                                <div class="thumb  wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <img src="img/program_details/3.png" alt="">
-                                </div>
-                                <h4 class=" wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">Mr. Zosoldos</h4>
-                            </div>
-                        </div>
-                        <div class="single_propram">
-                            <div class="inner_wrap">
-                                <div class="circle_img"></div>
-                                <div class="porgram_top">
-                                    <span class="wow fadeInRight" data-wow-duration="1s"
-                                        data-wow-delay=".3s">3.00-4.00pm</span>
-                                    <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">12 Feb 2020
-                                    </h4>
-                                </div>
-                                <div class="thumb wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <img src="img/program_details/4.png" alt="">
-                                </div>
-                                <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".6s">Mr. Zosoldos
-                                </h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- map_area_start  -->
-    <div class="map_area">
-        <div id="map" style="height: 600px; position: relative; overflow: hidden;">
-
-        </div>
-        <script>
-            function initMap() {
-                var uluru = {
-                    lat: -25.363,
-                    lng: 131.044
-                };
-                var grayStyles = [{
-                    featureType: "all",
-                    stylers: [{
-                        saturation: -90
-                    },
-                    {
-                        lightness: 50
-                    }
-                    ]
-                },
-                {
-                    elementType: 'labels.text.fill',
-                    stylers: [{
-                        color: '#ccdee9'
-                    }]
-                }
-                ];
-                var map = new google.maps.Map(document.getElementById('map'), {
-                    center: {
-                        lat: -31.197,
-                        lng: 150.744
-                    },
-                    zoom: 9,
-                    styles: grayStyles,
-                    scrollwheel: false
-                });
-            }
-        </script>
-        <script
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfS1oRGreGSBU5HHjMmQ3o5NLw7VdJ6I&amp;callback=initMap">
-            </script>
-        <div class="location_information black_bg wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-            <h3>TEDx TKMCE 2020</h3>
-            <div class="info_wrap">
-                <div class="single_info">
-                    <span>Venue:</span>
-                    <p>TKM College of Engineering</p>
-                </div>
-                <div class="single_info">
-                    <span>Phone:</span>
-                    <p>+91 9847 812 358</p>
-                </div>
-                <div class="single_info">
-                    <span>Email:</span>
-                    <p>tedxtmce@gmail.com</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- map_area_end  -->
-
-    <!-- brand_area_start  -->
     <div class="brand_area black_bg">
         <div class="container">
             <div class="row">
@@ -426,8 +274,62 @@
             </div>
         </div>
     </div>
-    <!-- brand_area_end  -->
-    <!-- footer_start  -->
+
+    <div class="brand_area black_bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="section_title text-center mb-80">
+                        <h4 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Our Team</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3">
+                    <div class="card" style="background-color: black; padding: 20%;">
+                        <img class="card-img-top" src="./img/blog/author.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: white;">Program main</h5>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="card" style="background-color: black; padding: 20%;">
+                        <img class="card-img-top" src="./img/blog/author.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: white;">Program main</h5>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="card" style="background-color: black; padding: 20%;">
+                        <img class="card-img-top" src="./img/blog/author.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: white;">Program main</h5>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="card" style="background-color: black; padding: 20%;">
+                        <img class="card-img-top" src="./img/blog/author.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: white;">Program main</h5>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    
+
+   
     <footer class="footer">
         <div class="footer_top">
             <div class="container">
@@ -436,7 +338,8 @@
                         <div class="footer_widget">
                             <div class="address_details text-center">
                                 <h4 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">17 July, 2020</h4>
-                                <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">TKM College of Engineering,Kollam</h3>
+                                <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">TKM College of
+                                    Engineering,Kollam</h3>
                                 <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">The event regularly
                                     attracts a diverse range of attendees from around Kerala.</p>
                                 <a href="#" class="boxed-btn3 wow fadeInUp" data-wow-duration="1s"
