--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>TEDx TKMCE</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="yandex-verification" content="fc48d867abeba680" />
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
