--- a/index.html
+++ b/index.html
@@ -436,32 +436,18 @@
                         </div>
                         <button id="register" class="btn btn-primary">Submit</button>
                     </form>
+
+                    <div id="regSuccess">
+                        <p>Your Registration was successfull</p>
+                    </div>
                 </div>
 
             </div>
         </div>
     </div>
-    <div class="successModal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Modal title</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <p>Modal body text goes here.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
+    
     <script type="text/javascript">
-
+        $('#regSuccess').hide();
         $('#regForm').submit(function (e) {
             e.preventDefault();
 
@@ -486,7 +472,8 @@
                 }).then(data => {
                     console.log(data);
                     if (data.success == true) {
-                        $('#formModal').hide();
+                        $('#regForm').hide();
+                        $('#regSuccess').show();
                         
                     }
                 }).catch(err => {
