--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- header-start -->
     <header>
         <div class="header-area ">
-            <div id="sticky-header" class="main-header-area">
+            <div  class="main-header-area">
                 <div class="container">
                     <div class="header_bottom_border">
                         <div class="row align-items-center">
@@ -46,7 +46,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-xl-6 col-lg-6">
+                            <div class="col-xl-6 col-lg-8">
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
@@ -55,7 +55,7 @@
                                             <li><a href="speakers.html">Speakers</a></li>
                                             <li><a href="sponsors.html">Sponsers</a></li>
                                             <li><a href="team.html">Team</a></li>
-                                            <li><a href="#">Preview</a></li>
+                                            <!-- <li><a href="#">Preview</a></li> -->
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
@@ -99,18 +99,18 @@
                                     class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">x</span>
                                 <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">TKMCE</span>
                             </h3> -->
-                            <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">Theme<span
+                            <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s" style="font-family: tedFont;">Prosper.Sapience<span
                                     id="x"></span>
                             </h3>
-                            <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">17 July,
+                            <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s" style="font-family: tedFont;">17 July,
                                 2020</span>
                             <a href="#" class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
-                                <p>TKM College of Engineering, Kollam</p>
+                                <p style="font-family: tedFont;">TKM College of Engineering, Kollam</p>
                             </a>
-                            <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">10.00 AM IST</span>
+                            <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s" style="font-family: tedFont;">10.00 AM IST</span>
                             <div class="row mt-4 justify-content-center">
                                 <div class="col-xl-4 col-lg-4">
-                                    <a id="get_tkt" data-toggle="modal" data-target="#formModal">Get Tickets Now</a>
+                                    <a id="get_tkt" data-toggle="modal" data-target="#formModal" style="font-family: tedFont;">Get Tickets Now</a>
                                 </div>
                             </div>
                         </div>
@@ -139,9 +139,7 @@
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">About TED</h3>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">The event regularly
-                            attracts a diverse range of attendees from around the world, across different professions,
-                            and with different.</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">TED is a nonprofit devoted to spreading ideas, usually in the form of short, powerful talks (18 minutes or less). TED began in 1984 as a conference where Technology, Entertainment and Design converged, and today covers almost all topics — from science to business to global issues — and is covered in most of the languages in the world. TED stands for one mission and that is: Spread ideas.</p>
                     </div>
                 </div>
             </div>
@@ -149,16 +147,14 @@
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
                         <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TEDx</h3>
-                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">The event regularly
-                            attracts a diverse range of attendees from around the world, across different professions,
-                            and with different.</p>
+                        <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">TED is a global community, welcoming those people from every discipline and culture that passionately believe in the power of ideas to change attitudes, lives and, ultimately, the world. TED aims to build a clearinghouse of free knowledge from the world's most inspired thinkers — and through that, bring forth a community of curious souls to engage with ideas and each other, both online and at TED and TEDx events around the world, all year long.</p>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section_title text-center mb-80">
-                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">TKMCE</h3>
+                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s" >TKMCE</h3>
                         <p class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".4s">The event regularly
                             attracts a diverse range of attendees from around the world, across different professions,
                             and with different.</p>
@@ -286,8 +282,17 @@
             </div>
             <div class="row">
                 <div class="col-lg-3">
+                    <div class="card" style="background-color:transparent; padding: 20%;">
+                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top" src="./img/tedteam/Abhishek Vijayan~2.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: white; text-align: center;">Program main</h5>
+                            <h6 style="color: whitesmoke; text-align: center;" class="card-text">description</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
                     <div class="card" style="background-color: black; padding: 20%;">
-                        <img class="card-img-top" src="./img/blog/author.png" alt="Card image cap">
+                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top" src="./img/tedteam/Antony.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white;">Program main</h5>
                             <p class="card-text"></p>
@@ -296,7 +301,7 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="card" style="background-color: black; padding: 20%;">
-                        <img class="card-img-top" src="./img/blog/author.png" alt="Card image cap">
+                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top" src="./img/tedteam/Ashif.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white;">Program main</h5>
                             <p class="card-text"></p>
@@ -305,7 +310,18 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="card" style="background-color: black; padding: 20%;">
-                        <img class="card-img-top" src="./img/blog/author.png" alt="Card image cap">
+                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top" src="./img/tedteam/Azad.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: white;">Program main</h5>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-3">
+                    <div class="card" style="background-color: black; padding: 20%;">
+                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top" src="./img/tedteam/Fayrooz.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white;">Program main</h5>
                             <p class="card-text"></p>
@@ -314,7 +330,80 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="card" style="background-color: black; padding: 20%;">
-                        <img class="card-img-top" src="./img/blog/author.png" alt="Card image cap">
+                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top" src="./img/tedteam/Megha.jpeg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: white;">Program main</h5>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="card" style="background-color: black; padding: 20%;">
+                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top" src="./img/tedteam/Rithwik.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: white;">Program main</h5>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="card" style="background-color: black; padding: 20%;">
+                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top" src="./img/tedteam/Shadha.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: white;">Program main</h5>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="card" style="background-color: black; padding: 20%;">
+                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top" src="./img/tedteam/Thamjid.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: white;">Program main</h5>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="card" style="background-color: black; padding: 20%;">
+                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top" src="./img/tedteam/Vaishnav.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: white;">Program main</h5>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="card" style="background-color: black; padding: 20%;">
+                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top" src="./img/tedteam/Vishal.JPG" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: white;">Program main</h5>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="card" style="background-color: black; padding: 20%;">
+                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top" src="./img/tedteam/Zakiyya.JPG" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: white;">Program main</h5>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3"></div>
+                <div class="col-lg-3">
+                    <div class="card" style="background-color: black; padding: 20%;">
+                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top" src="./img/tedteam/Abhishek Vijayan~2.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title" style="color: white;">Program main</h5>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="card" style="background-color: black; padding: 20%;">
+                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top" src="./img/tedteam/Antony.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white;">Program main</h5>
                             <p class="card-text"></p>
