--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <a href="./performer1.html">
+                                    <a href="./performer.html">
                                         <img src="img/performer/1.png" alt="">
                                     </a>
                                 </div>
@@ -226,7 +226,6 @@
                                     <h4>Mohanlal</h4>
                                     <span>Actor</span>
                                     <div>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
                                         <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
                                         <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
                                     </div>
@@ -236,7 +235,7 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                                 <div data-tilt class="thumb">
-                                    <a href="./performer2.html">
+                                    <a href="./performer.html">
                                         <img src="img/performer/2.png" alt="">
                                     </a>
                                 </div>
@@ -244,7 +243,6 @@
                                     <h4>Prithviraj</h4>
                                     <span>Actor</span>
                                     <div>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
                                         <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
                                         <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
                                     </div>
@@ -254,7 +252,7 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
-                                    <a href="./performer3.html">
+                                    <a href="./performer.html">
                                         <img src="img/performer/3.png" alt="">
                                     </a>
                                 </div>
@@ -262,7 +260,6 @@
                                     <h4>Virat Kohli</h4>
                                     <span>Cricketer</span>
                                     <div>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
                                         <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
                                         <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
                                     </div>
@@ -479,7 +476,7 @@
                 <div class="col-lg-3">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
                         <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
-                            src="./img/tedteam/" alt="Card image cap">
+                            src="./img/tedteam/farzeena.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">FARZEENA IBRAHIM</h5>
                             <h6 style="color: whitesmoke; text-align: center;" class="card-text">CREATIVE DESIGN</h6>
