--- a/performer.html
+++ b/performer.html
@@ -84,40 +84,158 @@
     </header>
     <!-- header-end -->
 
-     <!-- bradcam_area -->
-     
-    <!-- bradcam_area end -->
-
     <!-- performar_area_start  -->
     <div class="performar_area black_bg">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-8">
-                    <div class="section_title mb-50">
-                        <h3 style="font-size: 45px;" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Performer 1</h3>
+
+            <!-- single performer -->
+            <div>
+                <div class="row">
+                    <div class="col-lg-8">
+                        <div class="section_title mb-50">
+                            <h3 style="font-size: 45px;" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Performer 1</h3>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row ">
-                <div class="col-lg-8">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-6">
-                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                                <div data-tilt class="thumb">
-                                    <img src="img/performer/1.png" alt="">
+                <div class="row ">
+                    <div class="col-lg-8">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-6">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                    <div data-tilt class="thumb">
+                                        <img src="img/performer/1.png" alt="">
+                                    </div>
+                                    <div class="performer_heading">
+                                        <!-- <h4>write anything</h4> -->
+                                        <!-- <span>Acoustic drum</span> -->
+                                        <div>
+                                            <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="performer_heading">
-                                    <!-- <h4>write anything</h4> -->
-                                    <!-- <span>Acoustic drum</span> -->
+                            </div>
+                            <div class="col-lg-8">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                    <div>
+                                        <p>
+                                            khjcjhc bxhasbc habjA HSUXBa hasbJA BAHXBa ahscbh
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-8">
-                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                                <div>
-                                    <p>
-                                        khjcjhc bxhasbc habjA HSUXBa hasbJA BAHXBa ahscbh
-                                    </p>
+                    </div>
+                </div>
+            </div>
+            <!-- single performer end -->
+            <div>
+                <div class="row">
+                    <div class="col-lg-8">
+                        <div class="section_title mb-50">
+                            <h3 style="font-size: 45px;" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Performer 1</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row ">
+                    <div class="col-lg-8">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-6">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                    <div data-tilt class="thumb">
+                                        <img src="img/performer/1.png" alt="">
+                                    </div>
+                                    <div class="performer_heading">
+                                        <!-- <h4>write anything</h4> -->
+                                        <!-- <span>Acoustic drum</span> -->
+                                        <div>
+                                            <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-8">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                    <div>
+                                        <p>
+                                            khjcjhc bxhasbc habjA HSUXBa hasbJA BAHXBa ahscbh
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="row">
+                    <div class="col-lg-8">
+                        <div class="section_title mb-50">
+                            <h3 style="font-size: 45px;" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Performer 1</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row ">
+                    <div class="col-lg-8">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-6">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                    <div data-tilt class="thumb">
+                                        <img src="img/performer/1.png" alt="">
+                                    </div>
+                                    <div class="performer_heading">
+                                        <!-- <h4>write anything</h4> -->
+                                        <!-- <span>Acoustic drum</span> -->
+                                        <div>
+                                            <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-8">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                    <div>
+                                        <p>
+                                            khjcjhc bxhasbc habjA HSUXBa hasbJA BAHXBa ahscbh
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="row">
+                    <div class="col-lg-8">
+                        <div class="section_title mb-50">
+                            <h3 style="font-size: 45px;" class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Performer 1</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="row ">
+                    <div class="col-lg-8">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-6">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                    <div data-tilt class="thumb">
+                                        <img src="img/performer/1.png" alt="">
+                                    </div>
+                                    <div class="performer_heading">
+                                        <!-- <h4>write anything</h4> -->
+                                        <!-- <span>Acoustic drum</span> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-8">
+                                <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                                    <div>
+                                        <p>
+                                            khjcjhc bxhasbc habjA HSUXBa hasbJA BAHXBa ahscbh
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
