--- a/register.html
+++ b/register.html
@@ -117,10 +117,11 @@
                                 </div>
                                 <div class="col-12">
                                     <div class="form-group">
-                                        <input class="form-control" name="address" id="address" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Your Address'" placeholder="Enter Your Address">
+                                        <textarea rows="6" class="form-control" name="address1" id="address1" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Your Address'" placeholder="Enter Your Address"></textarea>
                                         <small id="addressHelp" class="form-text text-muted">We will be sending you a personalised
                                             goodies bag so provide a shippable address</small>
                                     </div>
+                                    
                                 </div>
                             </div>
                             <div class="form-group mt-3">
