--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                             <div class="col-xl-3 col-lg-3">
                                 <div class="logo">
                                     <a href="index.html">
-                                        <img src="img/tedxtkmce.jpeg"
-                                            style="width:230px; height:50px; object-fit: cover">
+                                        <img src="img/TEDX TKMCE LOGO .png"
+                                            style="width:230px; height:50px; object-fit: cover; margin-top: 1%;">
                                     </a>
                                 </div>
                             </div>
@@ -325,9 +325,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" style="background-color:black; padding: 20%; height: 350px;">
-                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
+                        <img style="object-fit:cover; width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Leba.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">LEBA ANNA MATHEW</h5>
@@ -335,9 +335,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" style="background-color: black; padding: 20%;height: 350px;">
-                        <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
+                        <img style="object-fit:cover; width: 150px; height: 150px; margin-left: auto; margin-right: auto;" class="card-img-top"
                             src="./img/tedteam/Thamjid.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title" style="color: white; text-align: center;">THAMJID NOUSHAL</h5>
@@ -346,7 +346,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
                         <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
                             src="./img/tedteam/Megha.jpeg" alt="Card image cap">
@@ -357,7 +357,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
                         <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
                             src="./img/tedteam/Zakiyya.JPG" alt="Card image cap">
@@ -372,7 +372,7 @@
                 <br />
 
 
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
                         <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
                             src="./img/tedteam/Fayrooz.jpg" alt="Card image cap">
@@ -383,7 +383,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
                         <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
                             src="./img/tedteam/Rithwik.jpg" alt="Card image cap">
@@ -394,7 +394,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
                         <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
                             src="./img/tedteam/Vishal.JPG" alt="Card image cap">
@@ -406,7 +406,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
                         <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
                             src="./img/tedteam/Antony.jpg" alt="Card image cap">
@@ -417,7 +417,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
                         <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
                             src="./img/tedteam/Ashif.jpg" alt="Card image cap">
@@ -428,7 +428,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
                         <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
                             src="./img/tedteam/Vaishnav.jpg" alt="Card image cap">
@@ -439,7 +439,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
                         <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
                             src="./img/tedteam/Shadha.jpg" alt="Card image cap">
@@ -450,7 +450,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
                         <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
                             src="./img/tedteam/Azad.jpg" alt="Card image cap">
@@ -461,8 +461,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3"></div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
                         <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
                             src="./img/tedteam/Abhishek Vijayan~2.jpg" alt="Card image cap">
@@ -473,7 +472,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card" style="background-color: black; padding: 20%; height: 350px;">
                         <img style="object-fit:cover; width: 150px; height: 150px;" class="card-img-top"
                             src="./img/tedteam/farzeena.jpg" alt="Card image cap">
